--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">复习Android</string>
+    <string name="app_name">Android</string>
     <string name="remove_shortcut">remove_shortcut</string>
     <string name="disable_shortcut">disable_shortcut</string>
     <string name="add_new_website">add_new_website</string>
@@ -9,6 +9,9 @@
     <string name="pirates">pirates</string>
     <string name="cheese">cheese</string>
     <string name="ninjas">ninjas</string>
+    <string name="file">文件</string>
+    <string name="create_new">创建文件</string>
+    <string name="open">打开</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
